--- a/index.html
+++ b/index.html
@@ -9,19 +9,37 @@
             padding: 0;
             background-color: #000;
         }
+        #overlay {
+            font-family: "Courier New", sans-serif;
+            color: yellow;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        #score {
+            padding: 5px 10px;
+            font-size: 2em;
+            font-weight: bold;
+        }
     </style>
     <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 </head>
 <body>
 
+    <div id="overlay">
+        <div id="score">0</div>
+    </div>
+
     <script type="text/javascript">
+
+    var scoreEl = document.getElementById('score');
 
     var game = new Phaser.Game(448, 496, Phaser.AUTO);
 
     var Pacman = function (game) {
 
         this.map = null;
-        this.layer = null;
+        this.gameLayer = null;
         this.pacman = null;
 
         this.safetile = 14;
@@ -38,6 +56,8 @@
 
         this.current = Phaser.NONE;
         this.turning = Phaser.NONE;
+
+        this.score = 0;
 
     };
 
@@ -69,21 +89,32 @@
 
         create: function () {
 
+            this.createGameLayer();
+            this.createPacman();
+
+        },
+
+        createGameLayer: function () {
+
             this.map = this.add.tilemap('map');
             this.map.addTilesetImage('pacman-tiles', 'tiles');
 
-            this.layer = this.map.createLayer('Pacman');
+            this.gameLayer = this.map.createLayer('Pacman');
 
             this.dots = this.add.physicsGroup();
 
-            this.map.createFromTiles(7, this.safetile, 'dot', this.layer, this.dots);
+            this.map.createFromTiles(7, this.safetile, 'dot', this.gameLayer, this.dots);
 
             //  The dots will need to be offset by 6px to put them back in the middle of the grid
             this.dots.setAll('x', 6, false, false, 1);
             this.dots.setAll('y', 6, false, false, 1);
 
             //  Pacman should collide with everything except the safe tile
-            this.map.setCollisionByExclusion([this.safetile], true, this.layer);
+            this.map.setCollisionByExclusion([this.safetile], true, this.gameLayer);
+
+        },
+
+        createPacman: function () {
 
             //  Position Pacman at grid location 14x17 (the +8 accounts for his anchor)
             this.pacman = this.add.sprite((14 * 16) + 8, (17 * 16) + 8, 'pacman', 0);
@@ -218,6 +249,8 @@
 
             dot.kill();
 
+            this.setScoreText(this.score++);
+
             if (this.dots.total === 0)
             {
                 this.dots.callAll('revive');
@@ -226,18 +259,18 @@
         },
 
         update: function () {
-          
-            this.physics.arcade.collide(this.pacman, this.layer);
+
+            this.physics.arcade.collide(this.pacman, this.gameLayer);
             this.physics.arcade.overlap(this.pacman, this.dots, this.eatDot, null, this);
 
             this.marker.x = this.math.snapToFloor(Math.floor(this.pacman.x), this.gridsize) / this.gridsize;
             this.marker.y = this.math.snapToFloor(Math.floor(this.pacman.y), this.gridsize) / this.gridsize;
 
             //  Update our grid sensors
-            this.directions[1] = this.map.getTileLeft(this.layer.index, this.marker.x, this.marker.y);
-            this.directions[2] = this.map.getTileRight(this.layer.index, this.marker.x, this.marker.y);
-            this.directions[3] = this.map.getTileAbove(this.layer.index, this.marker.x, this.marker.y);
-            this.directions[4] = this.map.getTileBelow(this.layer.index, this.marker.x, this.marker.y);
+            this.directions[1] = this.map.getTileLeft(this.gameLayer.index, this.marker.x, this.marker.y);
+            this.directions[2] = this.map.getTileRight(this.gameLayer.index, this.marker.x, this.marker.y);
+            this.directions[3] = this.map.getTileAbove(this.gameLayer.index, this.marker.x, this.marker.y);
+            this.directions[4] = this.map.getTileBelow(this.gameLayer.index, this.marker.x, this.marker.y);
 
             this.checkKeys();
 
@@ -246,6 +279,10 @@
                 this.turn();
             }
 
+        },
+
+        setScoreText: function (score) {
+            scoreEl.innerHTML = score;
         }
 
     };
