--- a/index.html
+++ b/index.html
@@ -10,16 +10,36 @@
             background-color: #000;
         }
         #overlay {
-            font-family: "Courier New", sans-serif;
-            color: yellow;
             position: absolute;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
+            font-family: "Courier New", sans-serif;
+            color: yellow;
         }
         #score {
             padding: 5px 10px;
             font-size: 2em;
             font-weight: bold;
+        }
+        #winModal {
+            display: none;
+            width: 300px;
+            margin: 200px auto;
+            padding: 20px;
+            border: 3px solid #2121de;
+            border-radius: 10px;
+            background-color: #000;
+            text-align: center;
+        }
+        button {
+            border: 0;
+            background-color: yellow;
+            padding: 5px;
+            border-radius: 5px;
+            font-size: 1.1em;
+            cursor: pointer;
         }
     </style>
     <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
@@ -28,11 +48,19 @@
 
     <div id="overlay">
         <div id="score">0</div>
+        <div id="winModal">
+            <h3>Woot Woot!</h3>
+            <p>You Won The Hack!</p>
+            <p>Amazeballs.</p>
+            <p><button id="restartBtn">Restart</button></p>
+        </div>
     </div>
 
     <script type="text/javascript">
 
-    var scoreEl = document.getElementById('score');
+    var scoreEl = document.getElementById('score'),
+        winModalEl = document.getElementById('winModal'),
+        restartBtn = document.getElementById('restartBtn');
 
     var game = new Phaser.Game(448, 496, Phaser.AUTO);
 
@@ -72,6 +100,8 @@
             Phaser.Canvas.setImageRenderingCrisp(this.game.canvas);
 
             this.physics.startSystem(Phaser.Physics.ARCADE);
+
+            restartBtn.onclick = this.restartGame.bind(this);
 
         },
 
@@ -253,7 +283,7 @@
 
             if (this.dots.total === 0)
             {
-                this.dots.callAll('revive');
+                this.onWinGame();
             }
 
         },
@@ -283,6 +313,22 @@
 
         setScoreText: function (score) {
             scoreEl.innerHTML = score;
+        },
+
+        onWinGame: function () {
+
+            winModalEl.style.display = 'block';
+
+        },
+
+        restartGame: function () {
+
+            winModalEl.style.display = 'none';
+
+            this.dots.callAll('revive');
+            this.score = 0;
+            this.setScoreText(this.score);
+
         }
 
     };
