--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
             //  We need this because the assets are on Amazon S3
             this.load.image('dot', 'assets/dot.png');
+            this.load.image('pizza','assets/pacman.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
             this.load.spritesheet('pacman', 'assets/pacman.png', 32, 32);
             this.load.tilemap('map', 'assets/pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
@@ -133,11 +134,20 @@
 
             this.dots = this.add.physicsGroup();
 
-            this.map.createFromTiles(7, this.safetile, 'dot', this.gameLayer, this.dots);
+            this.map.createFromTiles(
+                    7,                 // tiles index to create sprites from
+                    this.safetile,     // replacements tile index to change a converted tile to
+                    'dot',             // sprite key
+                    this.gameLayer,    // layer to operate on
+                    this.dots);        // group to add sprites to
 
             //  The dots will need to be offset by 6px to put them back in the middle of the grid
             this.dots.setAll('x', 6, false, false, 1);
             this.dots.setAll('y', 6, false, false, 1);
+
+            this.powerups = this.add.physicsGroup();
+
+            this.map.createFromTiles(40, this.safetile, 'pizza', this.gameLayer, this.powerups);
 
             //  Pacman should collide with everything except the safe tile
             this.map.setCollisionByExclusion([this.safetile], true, this.gameLayer);
