--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #6da0bb;
+            background-color: #6a9db8;
         }
         #overlay {
             position: absolute;
