--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Pacman</title>
   <meta charset="utf-8">
+  <!--
+   _
+  | |
+  | |__   __ _  ___ ______ _ __ ___   __ _ _ __
+  | '_ \ / _` |/ __|______| '_ ` _ \ / _` | '_ \
+  | | | | (_| | (__       | | | | | | (_| | | | |
+  |_| |_|\__,_|\___|      |_| |_| |_|\__,_|_| |_|
+  -->
+  <title>hac-man</title>
   <style>
     body {
       margin: 0;
