--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     preload: function () {
 
       //  We need this because the assets are on Amazon S3
-      this.load.image('dot', 'assets/dot.png');
+      this.load.image('dot', 'assets/dot.png', 20, 20);
       this.load.image('pizza', 'assets/pizza.png', 32, 32);
       this.load.image('tiles', 'assets/pacman-tiles.png');
       this.load.spritesheet('pacman', 'assets/pacman.png', 32, 32);
