--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     this.map = null;
     this.gameLayer = null;
     this.badguys = [];
-    this.powerups = [];
+    this.powerUps = [];
     this.pacman = null;
 
 
@@ -167,9 +167,8 @@
       this.dots.setAll('x', 6, false, false, 1);
       this.dots.setAll('y', 6, false, false, 1);
 
-      this.powerups.push(this.createPizza(20, 20));
-
-      //this.map.createFromTiles(40, this.safetile, 'pizza', this.gameLayer, this.powerups);
+      this.powerUps.push(this.createPizza(20, 20));
+      this.powerUps.push(this.createPizza(140, 140));
 
       //  Pacman should collide with everything except the safe tile
       this.map.setCollisionByExclusion([this.safetile], true, this.gameLayer);
@@ -316,10 +315,25 @@
 
     },
 
+    eatPowerUp: function (pacman, powerUp) {
+
+      console.log('pizza!');
+
+      powerUp.kill();
+
+      this.setScoreText(this.score += 50);
+
+    },
+
     update: function () {
 
       this.physics.arcade.collide(this.pacman, this.gameLayer);
       this.physics.arcade.overlap(this.pacman, this.dots, this.eatDot, null, this);
+
+      // TODO try to switch array to a group so we don't have to loop through
+      for (var i = 0; i < this.powerUps.length; i++ ) {
+        game.physics.arcade.collide(this.pacman, this.powerUps[i], this.eatPowerUp.bind(this));
+      }
 
       this.marker.x = this.math.snapToFloor(Math.floor(this.pacman.x), this.gridsize) / this.gridsize;
       this.marker.y = this.math.snapToFloor(Math.floor(this.pacman.y), this.gridsize) / this.gridsize;
@@ -368,6 +382,8 @@
 
     createPizza: function (x, y) {
       var pizza = game.add.sprite(x, y, 'pizza', 0);
+      game.physics.arcade.enable(pizza);
+      pizza.scale.setTo(0.2, 0.2);
       return pizza;
     }
 
