--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #6a9db8;
+      background-color: #ed4f7e;
+
     }
 
     #overlay {
