--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       width: 100%;
       height: 100%;
       font-family: "Courier New", sans-serif;
-      color: yellow;
+      color: #37bec0;
     }
 
     #score {
