--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       cursor: pointer;
     }
   </style>
-  <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
-
+  <script src="libs/phaser.min.js"></script>
+  <script src="libs/howler.min.js"></script>
 </head>
 <body>
 
