Remove bad guy when hit

--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
 
     hitBadGuy: function(badGuy, pacman) {
       if (this.isPacmanInvincible) {
+        badGuy.kill();
       } else {
         loseModalEl.style.display = 'block';
       }
@@ -465,6 +466,7 @@
     },
 
     restartGame: function () {
+      console.log('restart');
 
       winModalEl.style.display = 'none';
       loseModalEl.style.display = 'none';
