jaz on the side

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <div class="character" style="background-image:url(assets/pacman-mark.png)"><span>Mark</span></div>
       <div class="character" style="background-image:url(assets/pacman-niall.png)"><span>Niall</span></div>
       <div class="character" style="background-image:url(assets/pacman-toby.png)"><span>Toby</span></div>
+      <div class="character" style="background-image:url(assets/pacman-jaz.png)"><span>Jaz</span></div>
     </div>
   </div>
   <div id="winModal" class="modal">
