--- a/index.html
+++ b/index.html
@@ -57,21 +57,23 @@
 
     #characters {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 20px;
+      right: 20px;
     }
 
     #characters .character {
-      width: 32px;
-      height: 32px;
+      width: 50px;
+      height: 50px;
       background-position: 0 0;
+      background-size: 50px 50px;
       float: left;
       clear: left;
     }
 
     #characters .character span {
-      padding-left: 36px;
-      line-height: 32px;
+      padding-left: 55px;
+      line-height: 50px;
+      color: white;
     }
   </style>
   <script src="libs/phaser.min.js"></script>
@@ -84,9 +86,9 @@
   <div id="characters">
     <p>Colleagues to defeat</p>
     <div>
-      <div class="character" style="background-image:url(assets/pacman-clo.png)"><span>Clo</span></div>
-      <div class="character" style="background-image:url(assets/pacman-ian.png)"><span>Ian</span></div>
-      <div class="character" style="background-image:url(assets/pacman-mark.png)"><span>Mark</span></div>
+      <div class="character" style="background-image:url(assets/profile-clo.png)"><span>Clo</span></div>
+      <div class="character" style="background-image:url(assets/profile-ian.png)"><span>Ian</span></div>
+      <div class="character" style="background-image:url(assets/profile-mark.png)"><span>Mark</span></div>
     </div>
   </div>
   <div id="winModal" class="modal">
