--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       margin: 0;
       padding: 0;
       background-color: #ed4f7e;
-
+      font-family: "avenir", sans-serif;
+      font-weight: bold;
     }
 
     #overlay {
@@ -25,7 +26,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-      font-family: "Courier New", sans-serif;
       color: #37bec0;
     }
 
@@ -56,9 +56,26 @@
     }
   </style>
   <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
+
+<h1 class="gbl-logo"><img src="assets/logo.svg"></h1>
+
+<div id="splashStart" class="splash">
+  <div class="splash-inner">
+    <img src="assets/logo.svg" class="splash-logo">
+    <ul class="splash-choose">
+      <li class="elia"><span>Elia</span></li>
+      <li class="petero"><span>Peter O</span></li>
+      <li class="emma"><span>Emma</span></li>
+      <li class="petert"><span>Peter T</span></li>
+      <li class="ash"><span>Aisling</span></li>
+      <li class="random"><span>Random</span></li>
+    </ul>
+  </div>
+</div>
 
 <div id="overlay">
   <div id="score">0</div>
@@ -66,13 +83,18 @@
     <h3>Woot Woot!</h3>
     <p>You Won The Hack!</p>
     <p>Amazeballs.</p>
-    <p>
-      <button id="restartBtn">Restart</button>
-    </p>
+    <p><button id="restartBtn">Restart</button></p>
   </div>
 </div>
 
 <script type="text/javascript">
+
+  var chooseChar = Array.prototype.slice.call(document.querySelectorAll(".splash-choose li"));
+  chooseChar.forEach(function (btn) {
+    btn.addEventListener("click", function (event) {
+      document.getElementsByTagName("body")[0].classList.toggle("char-chosen");
+    }.bind(btn));
+  });
 
   var scoreEl = document.getElementById('score'),
       winModalEl = document.getElementById('winModal'),
