--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
       line-height: 50px;
       color: white;
     }
+
+    #characters .eliminated span {
+      text-decoration: line-through;
+    }
   </style>
   <script src="libs/phaser.min.js"></script>
   <script src="libs/howler.min.js"></script>
@@ -86,14 +90,12 @@
   <div id="characters">
     <p>Colleagues to defeat</p>
     <div>
-
-      <div class="character" style="background-image:url(assets/profile-clo.png)"><span>Clo</span></div>
-      <div class="character" style="background-image:url(assets/profile-ian.png)"><span>Ian</span></div>
-      <div class="character" style="background-image:url(assets/profile-mark.png)"><span>Mark</span></div>
-      <div class="character" style="background-image:url(assets/profile-niall.png)"><span>Niall</span></div>
-      <div class="character" style="background-image:url(assets/profile-toby.png)"><span>Toby</span></div>
-      <div class="character" style="background-image:url(assets/profile-jaz.png)"><span>Jaz</span></div>
-
+      <div id="clo" class="character" style="background-image:url(assets/profile-clo.png)"><span>Clo</span></div>
+      <div id="ian" class="character" style="background-image:url(assets/pacman-ian.png)"><span>Ian</span></div>
+      <div id="mark" class="character" style="background-image:url(assets/pacman-mark.png)"><span>Mark</span></div>
+      <div id="niall" class="character" style="background-image:url(assets/pacman-niall.png)"><span>Niall</span></div>
+      <div id="toby" class="character" style="background-image:url(assets/pacman-toby.png)"><span>Toby</span></div>
+      <div id="jaz" class="character" style="background-image:url(assets/profile-jaz.png)"><span>Jaz</span></div>
     </div>
   </div>
   <div id="winModal" class="modal">
@@ -454,6 +456,7 @@
       if (this.isPacmanInvincible) {
         this.playBadGuySound(badGuy.name);
         badGuy.kill();
+        document.getElementById(badGuy.name).className += " eliminated";
       } else {
         loseModalEl.style.display = 'block';
       }
