Fix colleagues list

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     <p>Colleagues to defeat</p>
     <div>
       <div id="clo" class="character" style="background-image:url(assets/profile-clo.png)"><span>Clo</span></div>
-      <div id="ian" class="character" style="background-image:url(assets/pacman-ian.png)"><span>Ian</span></div>
-      <div id="mark" class="character" style="background-image:url(assets/pacman-mark.png)"><span>Mark</span></div>
-      <div id="niall" class="character" style="background-image:url(assets/pacman-niall.png)"><span>Niall</span></div>
-      <div id="toby" class="character" style="background-image:url(assets/pacman-toby.png)"><span>Toby</span></div>
+      <div id="ian" class="character" style="background-image:url(assets/profile-ian.png)"><span>Ian</span></div>
+      <div id="mark" class="character" style="background-image:url(assets/profile-mark.png)"><span>Mark</span></div>
+      <div id="niall" class="character" style="background-image:url(assets/profile-niall.png)"><span>Niall</span></div>
+      <div id="toby" class="character" style="background-image:url(assets/profile-toby.png)"><span>Toby</span></div>
       <div id="jaz" class="character" style="background-image:url(assets/profile-jaz.png)"><span>Jaz</span></div>
     </div>
   </div>
