--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       margin: 0;
       padding: 0;
       background-color: #ed4f7e;
+      font-family: "avenir", sans-serif;
+      font-weight: bold;
 
     }
 
@@ -25,7 +27,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-      font-family: "Courier New", sans-serif;
       color: #37bec0;
     }
 
@@ -36,23 +37,26 @@
     }
 
     .modal {
-      display: none;
-      width: 300px;
-      margin: 200px auto;
-      padding: 20px;
-      border: 3px solid #2121de;
+      display: block;
+      width: 400px;
+      margin: 180px auto;
+      padding: 30px;
+      border: 10px solid white;
       border-radius: 10px;
-      background-color: #000;
+      background-color: #0ea2dc;
       text-align: center;
+      color: white;
     }
 
     button {
       border: 0;
-      background-color: yellow;
-      padding: 5px;
+      background-color: #9b5ca4;
+      padding: 10px 15px;
       border-radius: 5px;
       font-size: 1.1em;
       cursor: pointer;
+      color: white;
+      font-weight: bold;
     }
 
     #characters {
@@ -72,7 +76,7 @@
 
     #characters .character span {
       padding-left: 55px;
-      line-height: 50px;
+      line-height: 55px;
       color: white;
     }
   </style>
@@ -97,9 +101,9 @@
     </div>
   </div>
   <div id="winModal" class="modal">
-    <h3>Woot Woot!</h3>
-    <p>You Won The Hack!</p>
-    <p>Amazeballs.</p>
+    <h2>Congratulations!</h2>
+    <p>You have defeated all evil Pebblers.</p>
+    <p>Go make yourself a cuppa tea.</p>
     <p>
       <button id="restartBtn">Restart</button>
     </p>
