--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     .modal {
       display: block;
       width: 400px;
-      margin: 180px auto;
+      margin: 140px auto;
       padding: 30px;
       border: 10px solid white;
       border-radius: 10px;
@@ -56,6 +56,7 @@
       cursor: pointer;
       color: white;
       font-weight: bold;
+      margin-top: 30px;
     }
 
     #characters {
