--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
 
     .modal {
-      display: block;
+      display: none;
       width: 400px;
       margin: 140px auto;
       padding: 30px;
