--- a/index.html
+++ b/index.html
@@ -628,6 +628,6 @@
 
 </script>
 
-<audio src="assets/soundtrack.mp3" autoplay></audio>
+<audio src="assets/soundtrack.mp3" autoplay loop></audio>
 </body>
 </html>
