--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
       margin: 5px auto;
     }
 
+    #characters .character:hover {
+      cursor: pointer;
+    }
+
     #characters .character span {
       padding-left: 55px;
       line-height: 55px;
@@ -101,7 +105,7 @@
 </head>
 <body>
 
-<h1 class="gbl-logo"><img src="assets/logo.svg"></h1>
+<h1 class="gbl-logo" style="position: absolute; right: 80px; top: 10px;"><img src="assets/logo.svg"></h1>
 
 <div id="splashStart" class="splash">
   <div class="splash-inner">
