--- a/index.html
+++ b/index.html
@@ -166,7 +166,11 @@
     'ian': new Howl({urls: ['assets/ian.m4a'], onend: onSoundEnded}),
     'emma': new Howl({urls: ['assets/emma.wav'], onend: onSoundEnded}),
     'clo': new Howl({urls: ['assets/clo-evil.mp3'], onend: onSoundEnded}),
-    'nom': new Howl({urls: ['assets/nom.wav'], onend: onSoundEnded}),
+    'nom-emma': new Howl({urls: ['assets/nom-emma.wav'], onend: onSoundEnded}),
+    'nom-elia': new Howl({urls: ['assets/nom-elia.wav'], onend: onSoundEnded}),
+    'nom-petert': new Howl({urls: ['assets/nom-petert.wav'], onend: onSoundEnded}),
+    'nom-petero': new Howl({urls: ['assets/nom-petero.wav'], onend: onSoundEnded}),
+    'nom-aisling': new Howl({urls: ['assets/nom-aisling.wav'], onend: onSoundEnded}),
     'elia': new Howl({urls: ['assets/elia.wav'], onend: onSoundEnded}),
     'aisling': new Howl({urls: ['assets/aisling.wav'], onend: onSoundEnded}),
     'petert': new Howl({urls: ['assets/petert.wav'], onend: onSoundEnded}),
@@ -479,7 +483,7 @@
 
       this.setScoreText(this.score += 50);
 
-      this.playSound('nom');
+      this.playSound('nom-' + hero);
 
     },
 
