--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         badGuy.kill();
         document.getElementById(badGuy.name).className += " eliminated";
       } else {
-        document.getElementById('killerImage').src = 'assets/profile-' + badGuy.name.toLowerCase() +  '.png';
+        document.getElementById('killerImage').src = 'assets/talk-' + badGuy.name.toLowerCase() +  '.gif';
         document.getElementById('killerText').innerHTML = 'You have been defeated by ' + displayName;
         this.playSound(badGuy.name);
         loseModalEl.style.display = 'block';
